# hpm_sdk_extra

./: .gitignore  LICENSE  README.md
debugging/: README.md
debugging/debug_key/: debug_key.cfg  debug_key.jlinkscript
demos/i2s_multiline/i2s_4_dma_req_multiline/: CMakeLists.txt  README_en.md  README_zh.md
demos/i2s_multiline/i2s_4_dma_req_multiline/src/: i2s_multiline_dma.c
demos/i2s_multiline/i2s_multiline_dmav2/: README_en.md  README_zh.md  app.yaml
demos/i2s_multiline/i2s_multiline_dmav2/src/: i2s_multiline_dma.c
demos/i2s_multiline/i2s_multiline_interrupt/: CMakeLists.txt  README_en.md  README_zh.md
demos/i2s_multiline/i2s_multiline_interrupt/src/: i2s_multiline_interrupt.c
demos/spi_nor_flash/common/port/: hpm_serial_nor_host_port.c  hpm_serial_nor_host_port.h
demos/spi_nor_flash/nor_flash/: README_cn.md
demos/spi_nor_flash/nor_flash/src/: main.c
demos/spi_nor_flash/nor_flash_msc/src/: main.c
spi_nor_flash/nor_flash/: CMakeLists.txt  README.md
spi_nor_flash/nor_flash/src/: main.c
spi_nor_flash/nor_flash_msc/: CMakeLists.txt  README.md  README_cn.md
spi_nor_flash/nor_flash_msc/src/: main.c  msc_qspi_flash.c  usb_config.h
